--- a/assign4_JSON/index.html
+++ b/assign4_JSON/index.html
@@ -37,20 +37,20 @@
     <div class="span6">
       <!--div class="box"-->
         <div id="box1" class="box" > 
-        <div class="nav-collapse collapse"></div>
-        <h2>Function 1: Search by City</h2>
-        <div id="locations" style="float:left"></div>
+          <div class="nav-collapse collapse"></div>
+          <h2>Function 1: Search by City</h2>
+          <div id="locations" style="float:left"></div>
         </div>
       <!--/div-->
       <!--div class="box"-->
         <div id="box2" class="box" >
-        <h2>Function 2: Search with Class</h2>      
-        <div id="region" style="float:left" >
-        <select class="selectpicker show-tick" id="county">
-        </select>
-        <select class="selectpicker show-tick" id="city" >
-        </select>
-        </div>
+          <h2>Function 2: Search with Class</h2>      
+          <div id="region" style="float:left" >
+            <select class="selectpicker show-tick" id="county">
+            </select>
+            <select class="selectpicker show-tick" id="city" >
+            </select>
+          </div>
         </div>
       <!--/div-->
     </div>
@@ -61,19 +61,23 @@
         <h2 id ="theTitle">Conditions</h2>
         <div id="description">
           <h4>Title</h4>
-        <div id="title"></div>
+          <div id="title"></div>
           <h4>Date</h4>
-        <div id="date"></div>
+          <div id="date"></div>
           <h4>Location</h4>
-        <div id="location"></div>
+          <div id="location"></div>
           <h4>Temperature</h4>
-        <div id="temp"></div>
+          <div id="temp"></div>
           <h4>Condition</h4>
-        <div id="condition"></div>
-          <div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true"></div>
-
+          <div id="condition"></div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="span12">
+      <div class="fb-like" data-href="http://radiansmile.github.io/web/" data-send="true" data-width="450" data-show-faces="true"></div>
+
     </div>
   </div>
 </div>
