--- a/Final/index.html
+++ b/Final/index.html
@@ -35,12 +35,12 @@ h2 {
             <h2 id="fade-it">Fade It</h2>
 		</div>
 
-<div id="parallax" style="position:relative">
+<div id="parallax" style="position:relative; background:#CC66FF;">
 
-  <h2>JJJJJJJJ</h2>
+<h2>JJJJJJJJ</h2>
 <div id="bg" style="margin-left:500px; z-index:99999;position:relative">  <img src="img/bg.jpg"></div>
 <div id="logo" style="margin-left:500px; z-index:99999;position:relative"> <img src="img/logo.png"></div>
-  <h2>JJJJJJJJ</h2>
+<h2>JJJJJJJJ</h2>
 </div>
 
 
