--- a/assign5/FBapi/Ex1_friends.html
+++ b/assign5/FBapi/Ex1_friends.html
@@ -44,7 +44,8 @@
 		<script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script>
-			var defaultPath = "http://ckchen.dorma.nccu.edu.tw/~ckchen/Week2/Ex1_friends.html";
+			var defaultPath = "http://radiansmile.github.io/web";
+			// Login 不成功會跑到這個網頁
 		
 			window.fbAsyncInit = function() {
 				FB.init({
