--- a/Final/test.html
+++ b/Final/test.html
@@ -15,8 +15,7 @@ body { margin:0; padding:0; visibility: visible; display:block}
 #sprite1, #sprite2, #sprite3 ,#sprite4 { left:20%}
 #content1,#content2,#content3, #content4 { left:60%;  }
 #slide { width:100%; height:100%; position:relative; top:0; left:0}
-#sec4 , #sec3 { position:absolute; height:100%; width:100%; overflow:hidden;
-} 
+#sec4 , #sec3 { position:absolute; height:100%; width:100%; overflow:hidden;} 
 
 </style>
 
