--- a/assign3_JSON/answer.html
+++ b/assign3_JSON/answer.html
@@ -7,15 +7,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link href="../assign4_JSON/css/bootstrap.css" rel="stylesheet">
         <style>
             body {
                 padding-top: 60px;
                 /* 60px to make the container go all the way to the bottom of the topbar */
             }
         </style>
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">
-        <link href="css/bootstrap-select.min.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="../assign4_JSON/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="../assign4_JSON/css/bootstrap-select.min.css" rel="stylesheet" type="text/css" media="screen">
     </head>
     
     <body>
@@ -58,10 +58,10 @@
                 </div>
             </div>
         </div>
-        <script src="js/jquery-1.9.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/bootstrap-select.min.js"></script>
-        <script src="js/all.js"></script>
+        <script src="../assign4_JSON/js/jquery-1.9.1.min.js"></script>
+        <script src="../assign4_JSON/js/bootstrap.min.js"></script>
+        <script src="../assign4_JSON/js/bootstrap-select.min.js"></script>
+        <script src="../assign4_JSON/js/all.js"></script>
         <script type="text/javascript">
             window.onload = function() {
                 cityInit();
