--- a/assign3_JSON/test.html
+++ b/assign3_JSON/test.html
@@ -20,7 +20,7 @@
 .rain {width:170px;height:141px;background-position:-219px -185px;background-repeat:no-repeat;}
 .sunny {width:191px;height:181px;background-position:-0px -0px;background-repeat:no-repeat;}
 
-.cloudy1, .cloudy2, .rain, .sunny { margin-left:300px; margin-top:200px; position:absolute; background-image:url(weather.png);}
+.cloudy1, .cloudy2, .rain, .sunny { margin-left:300px; margin-top:200px; position:absolute; background-image:url(../assign4_JSON/weather.png);}
 </style>
 
 </head>
