--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>Radian Studio</h1>
         <p>Welcome to my website!! Here You could see my works and my ideas! I would be glad if you leave some message for me!</p>
         <br>
-        <div ><a class=" btn btn-primary btn-large" href="#">Good Days!!</a></div>
+        <div ><a class=" btn btn-primary btn-large" href="https://github.com/RadianSmile/web">Fork Me on Github!!</a></div>
       </div>
       <div class="row">
         <div class="span4 box1">
@@ -71,7 +71,7 @@
           <h2>JSON</h2>
           <p>A nice JS I have learned. Let's see a weather Casting! </p>
           <div>
-            <a class="btn btn-primary" href="assign4_JSON/index.html">JSON</a>
+            <a class="btn btn-primary" href="assign3_JSON/index.html">JSON</a>
           </div>
         </div>
         <div class="span4 box1">
@@ -82,10 +82,10 @@
           </div>
         </div>
         <div class="span4 box1">
-          <h2>FB Api</h2>
+          <h2>FB App</h2>
           <p>Hey FB has manny open resource to use~ Do you want to use some function i set? Just click in!!</p>
           <div>
-            <a class="btn btn-primary" href="/Assign5/index.html">FB Api</a>
+            <a class="btn btn-primary" href="/assign4/index.html">FB Api</a>
           </div>
         </div>
       </div>
