--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <h2>FB App</h2>
           <p>Hey FB has manny open resource to use~ Do you want to use some function i set? Just click in!!</p>
           <div>
-            <a class="btn btn-primary" href="assign4/index.html">FB Api</a>
+            <a class="btn btn-primary" href="web/assign4/index.html">FB Api</a>
           </div>
         </div>
       </div>
