--- a/assign4/index.html
+++ b/assign4/index.html
@@ -40,7 +40,7 @@
      				FB.api('/me', function(response) {
        			console.log('Good to see you, ' + response.name + '.');
        			loginDialog();
-    		 });
+    		 },{ scope: ''});
    				} else {
      			console.log('User cancelled login or did not fully authorize.');
    				}
