--- a/Final/index.html
+++ b/Final/index.html
@@ -9,9 +9,10 @@
 
 <p><a href="test_1TweenMax.html">test_1TweenMax.html</a>
 
-<p><a href="test_2TweenMax.html">test_2TweenMax.html</a>
-</p>
+<p><a href="test_2TweenMax.html">test_2TweenMax.html</a></p>
+
 <p><a href="test_3parallax.html">test_3parallax.html</a></p>
+
 <p><a href="test_4explodeFlower.html">test_4explodeFlower.html</a></p>
 <p>&nbsp;</p>
 </body>
