add Final Tests

--- a/Final/index.html
+++ b/Final/index.html
@@ -13,7 +13,9 @@
 
 <p><a href="test_3parallax.html">test_3parallax.html</a></p>
 
-<p><a href="test_4explodeFlower.html">test_4explodeFlower.html</a></p>
+<p><a href="test_4rotateFlower.html">test_4RotateFlower.html</a></p>
+
+<p><a href="test_5explodeFlower.html">test_5explodeFlower.html</a></p>
 <p>&nbsp;</p>
 </body>
 </html>
