--- a/Final/_blank.html
+++ b/Final/_blank.html
@@ -4,16 +4,18 @@
 <meta charset="utf-8">
 <title>Blank</title>
 
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<!--link href="css/bootstrap.min.css" rel="stylesheet"-->
+<!--link href="css/bootstrap-responsive.min.css" rel="stylesheet"-->
+<link href="css/parallax.css" rel="stylesheet">
 <style>
-
+.test{ background:url(img/logo.png); width:300px; height:300px ; rotation:180deg;;}
 </style>
 
 </head>
 
 <body>
 <div class="container">
+ <div class="test"></div>
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/TweenMax.min.js"></script>
