--- a/Final/test_1TweenMax.html
+++ b/Final/test_1TweenMax.html
@@ -6,6 +6,22 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="css/custom.css" rel="stylesheet">
+<style>
+.container {
+	height:2000px;
+	background:#999999;
+}
+	
+.logo {
+	width:300px;
+	height:300px;
+	position:relative;
+}
+.pic {
+	position:absolute;
+}
+
+</style>
 </head>
 
 <body>
