--- a/assign4/index.html
+++ b/assign4/index.html
@@ -9,42 +9,39 @@
 	<body>
 		<!--第一步：請先在此加入Facebook應用程式開發所需要的的資源，請參考 https://developers.facebook.com/docs/reference/javascript/ -->
 		<div id="fb-root"></div>
-<script>
-  window.fbAsyncInit = function() {
-    // init the FB JS SDK
-    FB.init({
-      appId      : 385059501613174,                        // App ID from the app dashboard
-      channelUrl : 'http://radiansmile.github.io/web', // Channel file for x-domain comms
-      status     : true,                                 // Check Facebook Login status
-      xfbml      : true                                  // Look for social plugins on the page
-    });
-
-    // Additional initialization code such as adding Event Listeners goes here
-  };
-
-  // Load the SDK asynchronously
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/all.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+		<script>
+      window.fbAsyncInit = function() {
+        // init the FB JS SDK
+        FB.init({
+          appId      : 385059501613174,                        // App ID from the app dashboard
+          channelUrl : 'http://radiansmile.github.io/web', // Channel file for x-domain comms
+          status     : true,                                 // Check Facebook Login status
+          xfbml      : true                                  // Look for social plugins on the page
+        });
+        // Additional initialization code such as adding Event Listeners goes here
+      };
+      (function(d, s, id){ // Load the SDK asynchronously
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/all.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
 
 		<script>
-			$(window).load(function () {
-				 FB.login(function(response) {
-  				 if (response.authResponse) {
-    				console.log('Welcome!  Fetching your information.... ');
-     				FB.api('/me', function(response) {
-       			console.log('Good to see you, ' + response.name + '.');
-       			loginDialog();
-    		 },{ scope: ''});
-   				} else {
-     			console.log('User cancelled login or did not fully authorize.');
-   				}
- });
+$(window).load(function () {
+FB.login(function(response) {
+ 	if (response.authResponse) {
+		console.log('Welcome!  Fetching your information.... ');
+		FB.api('/me', function(response) {
+			console.log('Good to see you, ' + response.name + '.');
+			loginDialog();
+		});
+	} else {
+	console.log('User cancelled login or did not fully authorize.');
+	}
+	},{ scope: ''});
 				/*
 				第二步：請在此處加入FB.login，請參考 https://developers.facebook.com/docs/reference/javascript/FB.login/
 				我們需要在login完成後呼叫loginDialog這個function，並且在後方的授權項目中加入所需要的授權
