--- a/assign4/index.html
+++ b/assign4/index.html
@@ -133,7 +133,7 @@
 				//create the div of the list and add all of the list into the right area.
 				while (temp["data"][i] != null){
 					GroupID[i] = temp["data"][i]["id"];//Save the id value of the group into an array.
-					$("<div><h1>" + temp["data"][i]["name"] + "</h1><ul class='sortFB connectSort' id='"+ GroupID[i] +"'></ul></div>").appendTo("#GroupList");
+					$("<div><h1>" + temp["data"][i]["name"] + "</h1><ul class='sortLI sortFB connectSort' id='"+ GroupID[i] +"'></ul></div>").appendTo("#GroupList");
 
 					i++;
 				}		
