--- a/assign4/index.html
+++ b/assign4/index.html
@@ -220,7 +220,7 @@
 					var i = ui.item;
 					var ID = $(a).attr('id');
 					
-					var a = alert("你確定要刪除此清單嗎?這動作會使FB裡的此清單也真的被刪除。")
+					var a = alert("你確定要刪除此清單嗎?這動作會使FB裡的此清單也真的被刪除。");
 					console.log (a);
 					if (a)
 					{
