--- a/assign4/index.html
+++ b/assign4/index.html
@@ -220,7 +220,8 @@
 					console.log(e,ui);
 					var $i = $(ui['item']);
 					var ID = $i.attr('id');
-					
+					console.log($i);
+					console.log($(this));
 					var a = confirm("你確定要刪除此清單嗎?這動作會使FB裡的此清單也真的被刪除。");
 					console.log (a);
 					if (a)
