--- a/assign4/index.html
+++ b/assign4/index.html
@@ -219,14 +219,15 @@
   			receive: function( e, ui ) {
 					console.log(e,ui);
 					var $i = $(ui['item']);
-					var ID = $i.find('ui').attr('id');
+					var id = $i.find('ui').attr('id');
+					console.log(id);
 					console.log($i);
 					console.log($(this));
 					var a = confirm("你確定要刪除此清單嗎?這動作會使FB裡的此清單也真的被刪除。");
 					console.log (a);
 					if (a)
 					{
-						FB.api( ID,'DELETE', function(res){
+						FB.api( ,'DELETE', function(res){
 							if (res) {alert ("刪除成功");$i.remove();}
 							else {alert ("刪除失敗");$i.cancel();}
 						});
