--- a/assign4/index.html
+++ b/assign4/index.html
@@ -227,7 +227,7 @@
 					console.log (a);
 					if (a)
 					{
-						FB.api( ,'DELETE', function(res){
+						FB.api( id ,'DELETE', function(res){
 							if (res) {alert ("刪除成功");$i.remove();}
 							else {alert ("刪除失敗");$i.cancel();}
 						});
