--- a/assign4/index.html
+++ b/assign4/index.html
@@ -219,7 +219,7 @@
   			receive: function( e, ui ) {
 					console.log(e,ui);
 					var $i = $(ui['item']);
-					var id = $i.find('ui').attr('id');
+					var id = $i.find('ul').attr('id');
 					console.log(id);
 					console.log($i);
 					console.log($(this));
