--- a/assign4/index.html
+++ b/assign4/index.html
@@ -21,7 +21,7 @@
 							FB.api('me/friendlists', 'post', {name: temptitle}, function(res){
 								var i = GroupID.length;
 								GroupID[i+1] = res.id;
-								$("<div><h1>" + temptitle + "</h1><ul class='sortLIs connectSort' id='"+ res.id +"'></ul></div>").appendTo("#GroupList");
+								$("<div><h1>" + temptitle + "</h1><ul class='sortLIs connectSort ui-sortable' id='"+ res.id +"'></ul></div>").appendTo("#GroupList");
 								getMembers(i);//start to display the existent members in the existent lists.
 							});
 						}else{
@@ -175,7 +175,7 @@
 				//create the div of the list and add all of the list into the right area.
 				while (temp["data"][i] != null){
 					GroupID[i] = temp["data"][i]["id"];//Save the id value of the group into an array.
-					$("<div><h1>" + temp["data"][i]["name"] + "</h1><ul class='sortLI connectSort' id='"+ GroupID[i] +"'></ul></div>").appendTo("#GroupList");
+					$("<div><h1>" + temp["data"][i]["name"] + "</h1><ul class='sortLI connectSort ui-sortable' id='"+ GroupID[i] +"'></ul></div>").appendTo("#GroupList");
 
 					i++;
 				}		
@@ -225,7 +225,7 @@
 		</script>
 			<div id="FriendList">
 				<h1>Your Friends</h1>
-				<ul class='sortFR connectSort' id="FillInList">
+				<ul class='sortFR connectSort ui-sortable' id="FillInList">
 				</ul>
 			</div>     
 			<div id="infoDiv">
