--- a/assign4/index.html
+++ b/assign4/index.html
@@ -59,12 +59,12 @@
       <script> // 加分項目
 	 function addScore(){
       $('.sortFR').sortable({
-			  connectWith: 'connectSort',
+			  connectWith: '.connectSort',
 			  tolerance:'pointer',
 				delay: 0
 			});
 	$('.sortLI').sortable({
-			  connectWith: 'connectSort',
+			  connectWith: '.connectSort',
 			  tolerance:'pointer',
 				delay: 0
 			});		
