--- a/assign4/index.html
+++ b/assign4/index.html
@@ -93,7 +93,7 @@
 							else {alert ("刪除失敗");$i.cancel();}
 						});
 					}else{
-						$(this).cancel();
+						$(this).sortable('cancel');
 					}
 					
 				}
