--- a/assign4/test.html
+++ b/assign4/test.html
@@ -56,6 +56,8 @@ ul 	{ display:block;}
 			
 			$('#right').sortable({ 
 				receive:function (e,u){
+					var a = $(this).attr('id');
+					console.log(a);
 					u.sender.sortable('cancel');
 					console.log($(u['item'].text("EEEEEEEEEEE"))
 				)}})
