--- a/assign4/index.html
+++ b/assign4/index.html
@@ -95,7 +95,7 @@
 						});
 						FB.api(addMem, 'POST', function(res){
 							if(res){
-								console.log('Member added!!');
+								console.log(addMem,res,'Member added!!');
 							}
 						});
 					}
