--- a/Final/index.html
+++ b/Final/index.html
@@ -16,6 +16,8 @@
 <p><a href="test_4rotateFlower.html">test_4RotateFlower.html</a></p>
 
 <p><a href="test_5explodeFlower.html">test_5explodeFlower.html</a></p>
+
+<p><a href="test_6Rotating Earth.html">test_6Rotating Earth.html</a></p>
 <p>&nbsp;</p>
 </body>
 </html>
