--- a/Final/test_7FBpic.html
+++ b/Final/test_7FBpic.html
@@ -33,7 +33,7 @@
 var accessToken;
 window.fbAsyncInit = function(){
   FB.init({
-    appId: 'PUT YOUR APPID HERE',
+    appId: 385059501613174,
     status: true,
     cookie: true,
     oauth: true,
