--- a/Final/index.html
+++ b/Final/index.html
@@ -18,6 +18,8 @@
 <p><a href="test_5explodeFlower.html">test_5explodeFlower.html</a></p>
 
 <p><a href="test_6Rotating Earth.html">test_6Rotating Earth.html</a></p>
+
+<p><a href="test_7FBpic.html">test_7FBpic.html</a></p>
 <p>&nbsp;</p>
 </body>
 </html>
