--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h2>Scrollorama</h2>
           <p>Do you want to see motion on my html5? Just click and you will see!! </p>
           <div>
-            <a class="btn btn-primary" href="Final/index.hmtl">Scrollorama</a>
+            <a class="btn btn-primary" href="Final/index.html">Scrollorama</a>
           </div>
         </div>
         <div class="span4 box1">
