--- a/Final/test_7FBpic.html
+++ b/Final/test_7FBpic.html
@@ -21,10 +21,10 @@
 <div>
   <a href="#" id="upload-trigger" onClick="javascript:fileUpload();">File Upload!</a>
   <form id="upload-photo-form" target="upload_iframe" method="post" enctype="multipart/form-data">
-    <input id="upload-photo-form-file" id="upFile" name="file" size="27" type="file" />
+    <input id="upload-photo-form-file" id="upFile" name="file" size="27" type="file" >
   </form>
   <iframe id="upload_iframe" name="upload_iframe" witdh="0px" height="0px" border="0" style="width:0; height:0; border:none;"></iframe>
-    <img id="blah" src="#" alt="your image" />
+  <img id="blah" src="#" alt="your image" />
 </div>
 
 <a href="#"><div id="post" > 宣傳  </div></a>
